walls work. arcs work. stuff starts to work. for now.

--- a/SpeckleElementsBuilder/SpeckleElements.csproj
+++ b/SpeckleElementsBuilder/SpeckleElements.csproj
@@ -62,7 +62,7 @@
     </PostBuildEvent>
     <PostBuildEvent>
       if not exist %localappdata%\SpeckleKitsDebug\$(ProjectName) mkdir %localappdata%\SpeckleKitsDebug\$(ProjectName)
-      Copy "$(TargetDir)" "%localappdata%\SpeckleKitsDebug\$(ProjectName)"
+      Copy "$(TargetDir)\*.dll" "%localappdata%\SpeckleKitsDebug\$(ProjectName)"
     </PostBuildEvent>
   </PropertyGroup>
 </Project>
