--- a/SpeckleElements/SpeckleElementsClasses.csproj
+++ b/SpeckleElements/SpeckleElementsClasses.csproj
@@ -54,7 +54,7 @@
       <Name>SpeckleCoreGeometryClasses</Name>
       <Private>False</Private>
     </ProjectReference>
-    <ProjectReference Include="..\SpeckleCore\SpeckleCore\SpeckleCore.csproj">
+    <ProjectReference Include="..\..\SpeckleCore\SpeckleCore\SpeckleCore.csproj">
       <Project>{cfe27d3d-8a1a-43f9-9387-8fd9e119e174}</Project>
       <Name>SpeckleCore</Name>
       <Private>False</Private>
