--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,7 +39,7 @@ after_build:
       Remove-Item "$Env:APPVEYOR_BUILD_FOLDER\SpeckleElementsBuilder\bin\Release\*.pdb" -Recurse -ErrorAction Ignore
       Remove-Item "$Env:APPVEYOR_BUILD_FOLDER\SpeckleElementsBuilder\bin\Release\SpeckleElements.dll.config" -Recurse -ErrorAction Ignore
  # zip everything into a zip file containing package folder structure
-  - 7z a SpeckleElements.zip "%APPVEYOR_BUILD_FOLDER%\SpeckleElements\bin\Release\*"
+  - 7z a SpeckleElements.zip "%APPVEYOR_BUILD_FOLDER%\SpeckleElementsBuilder\bin\Release\*"
 
 artifacts:
   path: SpeckleElements.zip
