Move Nic's changes from SpeckleGSA onto SpeckleElements.

--- a/SpeckleElementsGSA/SpeckleElementsGSA.csproj
+++ b/SpeckleElementsGSA/SpeckleElementsGSA.csproj
@@ -71,6 +71,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConversionRoutines\StructuralLoadTaskBuckling.cs" />
+    <Compile Include="ConversionRoutines\StructuralStageDefinition.cs" />
     <Compile Include="ConversionRoutines\Structural2DLoadPanel.cs" />
     <Compile Include="ConversionRoutines\Structural2DLoad.cs" />
     <Compile Include="ConversionRoutines\Structural2DVoid.cs" />
