Cleaned up formatting. Added analytical surface and boundary conditions.

--- a/SpeckleElementsRevit/SpeckleElementsRevit.csproj
+++ b/SpeckleElementsRevit/SpeckleElementsRevit.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConversionRoutines\AnalyticalNode.cs" />
+    <Compile Include="ConversionRoutines\AnalyticalSurface.cs" />
     <Compile Include="ConversionRoutines\AnalyticalStick.cs" />
     <Compile Include="ConversionRoutines\Beam.cs" />
     <Compile Include="ConversionRoutines\Column.cs" />
