--- a/SpeckleElementsGSA/SpeckleElementsGSA.csproj
+++ b/SpeckleElementsGSA/SpeckleElementsGSA.csproj
@@ -71,7 +71,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConversionRoutines\Structural1DElementResult.cs" />
     <Compile Include="ConversionRoutines\Structural1DLoadLine.cs" />
+    <Compile Include="ConversionRoutines\Structural2DElementResult.cs" />
     <Compile Include="ConversionRoutines\Structural2DElement.cs" />
     <Compile Include="ConversionRoutines\Structural2DLoadPanel.cs" />
     <Compile Include="ConversionRoutines\Structural2DLoad.cs" />
