--- a/SpeckleElementsGSA/SpeckleElementsGSA.csproj
+++ b/SpeckleElementsGSA/SpeckleElementsGSA.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConversionRoutines\StructuralAssembly.cs" />
+    <Compile Include="ConversionRoutines\StructuralGravityLoading.cs" />
     <Compile Include="ConversionRoutines\StructuralLinearSpringProperty.cs" />
     <Compile Include="ConversionRoutines\StructuralLoadTaskBuckling.cs" />
     <Compile Include="ConversionRoutines\StructuralStageDefinition.cs" />
