--- a/SpeckleElementsGSA/SpeckleElementsGSA.csproj
+++ b/SpeckleElementsGSA/SpeckleElementsGSA.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConversionRoutines\Structural2DElementLoadingThermal.cs" />
     <Compile Include="ConversionRoutines\StructuralAssembly.cs" />
     <Compile Include="ConversionRoutines\StructuralGravityLoading.cs" />
     <Compile Include="ConversionRoutines\StructuralLinearSpringProperty.cs" />
