--- a/SpeckleElementsBuilder/SpeckleElements.csproj
+++ b/SpeckleElementsBuilder/SpeckleElements.csproj
@@ -59,11 +59,14 @@
       <Name>SpeckleElementsClasses</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <!-- REMOVES CRUFT FROM SQLITE -->
     <RemoveDir Directories="$(TargetDir)x64" />
-    <RemoveDir Directories="$(TargetDir)x86" />    
+    <RemoveDir Directories="$(TargetDir)x86" />
     <ItemGroup>
       <BuildFiles Include="$(TargetDir)\*.*" />
     </ItemGroup>
