--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 # General Configuration
-version: 1.0.{build}
+version: 1.1.0.{build}
 skip_branch_with_pr: true
 
 # Environment Configuration
@@ -28,6 +28,8 @@ before_build:
   - nuget restore
 
 build:
+  publish_nuget: true
+  include_nuget_references: true
   project: SpeckleElements.sln
   verbosity: minimal
 
@@ -45,3 +47,15 @@ after_build:
 artifacts:
   path: SpeckleElements.zip
   name: Release
+
+#deploy to nuget
+deploy:
+  provider: NuGet
+  server:                  # remove to push to NuGet.org
+  api_key:
+    secure: n4EiHDLVSLjOzqT7OOOg3US3PWs6fNsOaGpyT/EFBKrTKl/1wMmmKt73MNuTngD+
+  skip_symbols: false
+  symbol_server:           # remove to push symbols to SymbolSource.org
+  artifact: /.*\.nupkg/
+  on:
+    branch: nuget
