fixed yaml path

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,13 +36,13 @@ build:
 after_build:
 # remove garbage
 #  - ps: |
-#      Remove-Item "$Env:APPVEYOR_BUILD_FOLDER\SpeckleElementsBuilder\bin\Release\x86" -Recurse -ErrorAction Ignore
-#      Remove-Item "$Env:APPVEYOR_BUILD_FOLDER\SpeckleElementsBuilder\bin\Release\x64" -Recurse -ErrorAction Ignore
-#      Remove-Item "$Env:APPVEYOR_BUILD_FOLDER\SpeckleElementsBuilder\bin\Release\*.pdb" -Recurse -ErrorAction Ignore
-#      Remove-Item "$Env:APPVEYOR_BUILD_FOLDER\SpeckleElementsBuilder\bin\Release\SpeckleElements.dll.config" -Recurse -ErrorAction Ignore
+#      Remove-Item "$Env:APPVEYOR_BUILD_FOLDER\SpeckleElements\bin\Release\x86" -Recurse -ErrorAction Ignore
+#      Remove-Item "$Env:APPVEYOR_BUILD_FOLDER\SpeckleElements\bin\Release\x64" -Recurse -ErrorAction Ignore
+#      Remove-Item "$Env:APPVEYOR_BUILD_FOLDER\SpeckleElements\bin\Release\*.pdb" -Recurse -ErrorAction Ignore
+#      Remove-Item "$Env:APPVEYOR_BUILD_FOLDER\SpeckleElements\bin\Release\SpeckleElements.dll.config" -Recurse -ErrorAction Ignore
 
 # zip everything into a zip file containing package folder structure
-  - 7z a SpeckleElements.zip "%APPVEYOR_BUILD_FOLDER%\SpeckleElementsBuilder\bin\Release\*"
+  - 7z a SpeckleElements.zip "%APPVEYOR_BUILD_FOLDER%\SpeckleElements\bin\Release\*"
 
 artifacts:
   path: SpeckleElements.zip
